--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.13.3",
+    "jade": "^1.11.0",
+    "morgan": "^1.6.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-eslint": "^4.1.6",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.4.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.1",
+    "babel-preset-stage-0": "^6.3.13",
     "cross-env": "^1.0.7",
     "eslint": "^1.10.3",
     "eslint-plugin-babel": "^3.0.0",
@@ -24,9 +32,9 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "keywords": [],
   "author": "Stanley C Yang <stanley@stanleycyang.com> (http://www.stanleycyang.com)",
-  "license": "ISC"
+  "license": "MIT"
 }
