--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookstore-react",
+  "name": "react-bible-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
