--- a/examples/book-inventory/package.json
+++ b/examples/book-inventory/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-eslint": "^4.1.6",
+    "babel-jest": "^6.0.1",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.4.0",
@@ -31,6 +32,9 @@
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.15.0",
     "eventsource-polyfill": "^0.9.6",
+    "jest": "^0.1.40",
+    "jest-cli": "^0.8.2",
+    "react-addons-test-utils": "^0.14.6",
     "rimraf": "^2.5.0",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.4.0",
@@ -42,7 +46,9 @@
     "lint": "eslint client",
     "clean": "rimraf static/dist",
     "build:webpack": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js",
-    "build": "npm run clean && npm run build:webpack"
+    "build": "npm run clean && npm run build:webpack",
+    "test": "BABEL_JEST_STAGE=0 jest",
+    "test:watch": "npm test -- --watch"
   },
   "keywords": [],
   "author": "Stanley C Yang <stanley@stanleycyang.com> (http://www.stanleycyang.com)",
